--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@ body{
 .car-body{
   position: fixed;
   margin-top: 25%;
-  animation: 5s infinite car;
+  animation: 10s infinite car;
 }
 @keyframes car{
 0%{
@@ -69,13 +69,13 @@ body{
   position: absolute;
   left: 225px;
   top: 77px;
-  animation: 5s infinite wheel linear;
+  animation: 10gis infinite wheel linear;
 }
 .wheel-2{
   position: absolute;
   left: 32px;
   top: 77px;
-  animation: 5s infinite wheel linear;
+  animation: 10s infinite wheel linear;
 }
 
 @keyframes wheel{
