--- a/style/style.css
+++ b/style/style.css
@@ -20,20 +20,23 @@ body{
   position: fixed;
   margin-top: 25%;
   animation: 10s infinite car;
+  
 }
 @keyframes car{
 0%{
-  left: 0%;
+  left: 2%;
+  
 }
 
 50%{
-  left: 85%;
+  left: 80%;
   
 }
+
 100%{
-  left: 0;
-  
-    }
+  left: 2%;
+  transform: rotateY(180deg);
+  }
 
   }
 
